--- a/Jade/test.html
+++ b/Jade/test.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>hello plug</title>
   </head>
   <body>
     <h1 class="H1 H2" id="h1">pug pug</h1>
     <h2 class="h2" id="h2">hello</h2>
     <p style="color:red;">
-      1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye
+      1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye<em>lalalala</em>
       1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye
       1e2uEDxSKVZSKhlIoQR3Ea9TdPa91xvP7Ye
     </p><a href="javascript:;">lllll</a>
     <div class="div"></div>
+    <!--just test-->
+    <input type="text" value="请输入你的姓名">
+    <input type="checkbox" value="男" checked>
   </body>
 </html>
